--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
     <title>Civic Hub</title>
-  </head>
-  <body>
+</head>
+
+<body class="quicksand">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
-  </body>
+</body>
+
 </html>
