added logout button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Civic Hub</title>
 </head>
 
-<body class="quicksand">
+<body class="quicksand bg-[#dae5ef]">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
 </body>
